@@ -178,6 +178,18 @@ name|util
 operator|.
 name|concurrent
 operator|.
+name|ThreadFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
 name|TimeUnit
 import|;
 end_import
@@ -1853,6 +1865,22 @@ operator|.
 name|util
 operator|.
 name|Clock
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ThreadFactoryBuilder
 import|;
 end_import
 
@@ -4507,17 +4535,11 @@ name|forcedState
 init|=
 literal|null
 decl_stmt|;
-comment|//Executor used for running future tasks. Setting thread pool size to 1
+comment|//Executor used for running future tasks.
 DECL|field|executor
 specifier|private
 name|ScheduledThreadPoolExecutor
 name|executor
-init|=
-operator|new
-name|ScheduledThreadPoolExecutor
-argument_list|(
-literal|1
-argument_list|)
 decl_stmt|;
 DECL|field|failWaitTriggerScheduledFuture
 specifier|private
@@ -4796,6 +4818,38 @@ operator|.
 name|constructJobACLs
 argument_list|(
 name|conf
+argument_list|)
+expr_stmt|;
+name|ThreadFactory
+name|threadFactory
+init|=
+operator|new
+name|ThreadFactoryBuilder
+argument_list|()
+operator|.
+name|setNameFormat
+argument_list|(
+literal|"Job Fail Wait Timeout Monitor #%d"
+argument_list|)
+operator|.
+name|setDaemon
+argument_list|(
+literal|true
+argument_list|)
+operator|.
+name|build
+argument_list|()
+decl_stmt|;
+name|this
+operator|.
+name|executor
+operator|=
+operator|new
+name|ScheduledThreadPoolExecutor
+argument_list|(
+literal|1
+argument_list|,
+name|threadFactory
 argument_list|)
 expr_stmt|;
 comment|// This "this leak" is okay because the retained pointer is in an
